地图定位调试 14

--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -36,8 +36,8 @@
             android:id="@+id/map_title"
             android:text="地图"
             android:textSize="17dp"
-            android:gravity="center|start"
-            android:paddingLeft="10dp"
+            android:textStyle="bold"
+            android:gravity="center"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_weight="1"
@@ -52,7 +52,7 @@
             android:layout_marginLeft="10dp"
             android:background="@drawable/edit_text_bg2"
             android:gravity="center"
-            android:hint="请输入搜索地址"
+            android:hint="请输入地址关键词"
             android:inputType="text"
             android:maxLines="1"
             android:textColor="@color/gray2"
@@ -113,20 +113,6 @@
                 android:textSize="16dp"
                 android:layout_marginBottom="60dp"
                 android:layout_marginLeft="40dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                tools:ignore="MissingConstraints" />
-            <Button
-                android:id="@+id/btnTestLocation"
-                android:visibility="gone"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:background="@drawable/btn_bg1"
-                android:text="测试"
-                android:textColor="@color/blackGray"
-                android:textSize="16dp"
-                android:layout_marginBottom="60dp"
-                android:layout_marginLeft="90dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 tools:ignore="MissingConstraints" />
