列表编辑优化1

--- a/app/src/main/res/layout/activity_like.xml
+++ b/app/src/main/res/layout/activity_like.xml
@@ -70,7 +70,8 @@
             android:textColor="@color/gray2"
             android:textSize="15dp"
             android:gravity="center"
-            android:text="编辑"/>
+            android:text="全选"
+            android:visibility="gone"/>
 
     </LinearLayout>
 
@@ -93,6 +94,9 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/like_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
+
+    <include layout="@layout/style_menu"/>
 
 </LinearLayout>
