--- a/app/src/main/res/layout/style_menu.xml
+++ b/app/src/main/res/layout/style_menu.xml
@@ -18,12 +18,12 @@
             android:layout_height="30dp"
             android:scaleType="centerInside"
             android:src="@drawable/btn_edit" />
-        <TextView
+        <!--<TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/blackGray"
             android:textSize="12dp"
-            android:text="编 辑"/>
+            android:text="编 辑"/>-->
     </LinearLayout>
     <LinearLayout
         android:id="@+id/menu_clear"
@@ -31,17 +31,17 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center"
-        android:visibility="visible">
+        android:visibility="gone">
         <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:scaleType="centerInside"
             android:src="@drawable/btn_clear" />
-        <TextView
+        <!--<TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/blackGray"
             android:textSize="12dp"
-            android:text="删 除"/>
+            android:text="删 除"/>-->
     </LinearLayout>
 </LinearLayout>
