列表编辑优化3

--- a/app/src/main/res/layout/activity_brower.xml
+++ b/app/src/main/res/layout/activity_brower.xml
@@ -19,7 +19,8 @@
             android:id="@+id/url_back"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:textColor="@color/gray2"
+            android:textColor="@color/blackGray"
+            android:paddingBottom="2.4dp"
             android:background="@color/colorLightGray0"
             android:gravity="center|start"
             android:paddingLeft="5dp"
