--- a/app/src/main/res/drawable/btn_close.xml
+++ b/app/src/main/res/drawable/btn_close.xml
@@ -4,6 +4,9 @@
     android:viewportWidth="1024"
     android:viewportHeight="1024">
   <path
-      android:pathData="M801.9,734 L579.9,512l222,-222c18.8,-18.8 18.9,-49.2 0.1,-68 -18.8,-18.8 -49.2,-18.8 -67.9,0L512,444 289.9,222c-18.7,-18.8 -49.1,-18.8 -67.9,0C203.3,240.8 203.3,271.2 222.1,290L444.1,512l-222,222c-18.8,18.8 -18.8,49.2 -0.1,68C231.4,811.4 243.8,816 256,816s24.6,-4.6 33.9,-14L512,580l222.1,222c9.4,9.3 21.7,14 33.9,14 12.3,0 24.6,-4.6 33.9,-14C820.7,783.1 820.7,752.8 801.9,734z"
+      android:pathData="M745.9,797.3L202.6,254c-5.5,-5.5 -5.5,-14.3 0,-19.8l41.8,-41.8c5.5,-5.5 14.3,-5.5 19.8,0l543.3,543.3c5.5,5.5 5.5,14.3 0,19.8L765.7,797.3c-5.5,5.4 -14.3,5.4 -19.8,0z"
+      android:fillColor="@color/blackGray"/>
+  <path
+      android:pathData="M202.6,735.8L745.9,192.5c5.5,-5.5 14.3,-5.5 19.8,0l41.8,41.8c5.5,5.5 5.5,14.3 0,19.8L264.1,797.3c-5.5,5.5 -14.3,5.5 -19.8,0l-41.8,-41.8c-5.4,-5.5 -5.4,-14.3 0,-19.8z"
       android:fillColor="@color/blackGray"/>
 </vector>
