--- a/app/src/main/res/layout/activity_txt.xml
+++ b/app/src/main/res/layout/activity_txt.xml
@@ -18,7 +18,8 @@
             android:layout_width="40dp"
             android:layout_height="50dp"
             android:background="@color/trans_color"
-            android:textColor="@color/gray2"
+            android:textColor="@color/blackGray"
+            android:paddingBottom="2.4dp"
             android:gravity="center|start"
             android:paddingLeft="5dp"
             android:textSize="20dp"
