--- a/app/src/main/res/layout/style_menu.xml
+++ b/app/src/main/res/layout/style_menu.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
+    android:layout_height="64dp"
     android:orientation="horizontal"
     android:gravity="center">
     <LinearLayout
         android:id="@+id/menu_edit"
-        android:layout_width="60dp"
+        android:layout_width="64dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center">
@@ -27,10 +27,11 @@
     </LinearLayout>
     <LinearLayout
         android:id="@+id/menu_clear"
-        android:layout_width="60dp"
+        android:layout_width="64dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center"
+        android:alpha="0.5"
         android:visibility="gone">
         <ImageView
             android:layout_width="30dp"
