--- a/app/src/main/res/layout/activity_like.xml
+++ b/app/src/main/res/layout/activity_like.xml
@@ -77,6 +77,7 @@
             android:layout_width="40dp"
             android:layout_height="50dp"
             android:gravity="center"
+            android:paddingLeft="6dp"
             android:orientation="vertical">
             <ImageView
                 android:layout_width="24dp"
@@ -94,14 +95,14 @@
             android:layout_weight="1">
             <TextView
                 android:id="@+id/like_text"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
                 android:text="请选择"
                 android:textSize="17dp"
                 android:textStyle="bold"
                 android:gravity="center"
                 android:textAlignment="center"
-                android:textColor="@color/gray4"
-                android:layout_width="50dp"
-                android:layout_height="50dp" />
+                android:textColor="@color/gray4"/>
         </LinearLayout>
 
         <Button
