--- a/app/src/main/res/layout/activity_like.xml
+++ b/app/src/main/res/layout/activity_like.xml
@@ -20,7 +20,7 @@
             android:layout_height="50dp"
             android:background="@color/trans_color"
             android:textColor="@color/blackGray"
-            android:paddingBottom="2.4dp"
+            android:paddingBottom="0dp"
             android:gravity="center|start"
             android:paddingLeft="5dp"
             android:textSize="20dp"
@@ -64,58 +64,7 @@
         </LinearLayout>
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/like_head2"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:visibility="gone">
-
-        <LinearLayout
-            android:id="@+id/like_close"
-            android:layout_width="40dp"
-            android:layout_height="50dp"
-            android:gravity="center"
-            android:paddingLeft="6.5dp"
-            android:orientation="vertical">
-            <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:scaleType="centerInside"
-                android:gravity="center"
-                android:src="@drawable/btn_close"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:gravity="center"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_weight="1">
-            <TextView
-                android:id="@+id/like_text"
-                android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:text="请选择"
-                android:textSize="17dp"
-                android:textStyle="bold"
-                android:gravity="center"
-                android:textAlignment="center"
-                android:textColor="@color/gray4"/>
-        </LinearLayout>
-
-        <Button
-            android:id="@+id/like_change"
-            android:layout_width="40dp"
-            android:layout_height="50dp"
-            android:paddingLeft="-10dp"
-            android:background="@color/trans_color"
-            android:textColor="@color/gray2"
-            android:textSize="15dp"
-            android:gravity="center"
-            android:text="全选" />
-    </LinearLayout>
+    <include layout="@layout/layout_edit_head"/>
 
     <LinearLayout
         android:id="@+id/like_bg"
@@ -140,6 +89,6 @@
         android:layout_height="0dp"
         android:layout_weight="1"/>
 
-    <include layout="@layout/style_menu"/>
+    <include layout="@layout/layout_edit_menu"/>
 
 </LinearLayout>
