--- a/app/src/main/res/drawable/btn_home2.xml
+++ b/app/src/main/res/drawable/btn_home2.xml
@@ -1,5 +1,9 @@
 <vector android:height="20dp" android:viewportHeight="1024"
     android:viewportWidth="1024" android:width="20dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#bfbfbf" android:pathData="M716.8,937.5L307.2,937.5a157.6,157.6 0,0 1,-152.7 -120.7l-83.1,-334.8a159.6,159.6 0,0 1,61.4 -169l288.1,-207.2a155.9,155.9 0,0 1,182.2 0L890.9,312.8a159.6,159.6 0,0 1,61.4 169l-83,334.9A157.7,157.7 0,0 1,716.8 937.5zM512,148.1A84.2,84.2 0,0 0,462.7 163.8L174.8,370.9a89.7,89.7 0,0 0,-33.9 93.7l83,334.9A86.1,86.1 0,0 0,307.2 865.8h409.6a86.1,86.1 0,0 0,83.1 -66.3l83,-334.9a89.7,89.7 0,0 0,-33.9 -93.7L561.3,163.8a84.1,84.1 0,0 0,-49.3 -15.7zM834.6,808.1z"/>
-    <path android:fillColor="#bfbfbf" android:pathData="M330.4,717.6a35.8,35.8 0,0 1,-34.8 -27.6L256,524.2a35.8,35.8 0,1 1,69.7 -16.5l39.4,165.7a35.8,35.8 0,0 1,-26.6 43.2,35.3 35.3,0 0,1 -8.1,1z"/>
+    <path android:fillColor="#bfbfbf"
+        android:strokeWidth="5" android:strokeColor="#FFFFFF"
+        android:pathData="M716.8,937.5L307.2,937.5a157.6,157.6 0,0 1,-152.7 -120.7l-83.1,-334.8a159.6,159.6 0,0 1,61.4 -169l288.1,-207.2a155.9,155.9 0,0 1,182.2 0L890.9,312.8a159.6,159.6 0,0 1,61.4 169l-83,334.9A157.7,157.7 0,0 1,716.8 937.5zM512,148.1A84.2,84.2 0,0 0,462.7 163.8L174.8,370.9a89.7,89.7 0,0 0,-33.9 93.7l83,334.9A86.1,86.1 0,0 0,307.2 865.8h409.6a86.1,86.1 0,0 0,83.1 -66.3l83,-334.9a89.7,89.7 0,0 0,-33.9 -93.7L561.3,163.8a84.1,84.1 0,0 0,-49.3 -15.7zM834.6,808.1z"/>
+    <path android:fillColor="#bfbfbf"
+        android:strokeWidth="5" android:strokeColor="#FFFFFF"
+        android:pathData="M330.4,717.6a35.8,35.8 0,0 1,-34.8 -27.6L256,524.2a35.8,35.8 0,1 1,69.7 -16.5l39.4,165.7a35.8,35.8 0,0 1,-26.6 43.2,35.3 35.3,0 0,1 -8.1,1z"/>
 </vector>
