--- a/app/src/main/res/layout/activity_brower2.xml
+++ b/app/src/main/res/layout/activity_brower2.xml
@@ -27,14 +27,14 @@
             android:orientation="horizontal"
             android:gravity="center"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="0.5dp"
+            android:layout_height="50dp"
             android:layout_weight="1">
             <ImageButton
                 android:id="@+id/btnBack"
                 android:scaleX="1"
-                android:layout_width="29dp"
-                android:layout_height="29dp"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_marginTop="0.5dp"
                 android:scaleType="fitCenter"
                 android:background="@drawable/back"
                 android:gravity="center" />
@@ -43,14 +43,14 @@
             android:orientation="vertical"
             android:gravity="center"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="0.5dp"
+            android:layout_height="50dp"
             android:layout_weight="1">
             <ImageButton
                 android:id="@+id/btnForward"
                 android:scaleX="-1"
-                android:layout_width="29dp"
-                android:layout_height="29dp"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_marginTop="0.5dp"
                 android:scaleType="fitCenter"
                 android:background="@drawable/back"
                 android:gravity="center" />
@@ -59,48 +59,55 @@
             android:orientation="vertical"
             android:gravity="center"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_weight="1">
             <ImageButton
                 android:id="@+id/btnHome"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
                 android:scaleType="fitCenter"
                 android:background="@drawable/btn_home2"
+                android:layout_marginTop="1dp"
                 android:gravity="center" />
         </LinearLayout>
         <LinearLayout
             android:orientation="vertical"
             android:gravity="center"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_weight="1">
-            <ImageButton
-                android:id="@+id/btnMonitor"
-                android:layout_width="28.5dp"
-                android:layout_height="28.5dp"
-                android:scaleType="fitCenter"
-                android:background="@drawable/btn_monitor"
-                android:gravity="center" />
+            <LinearLayout
+                android:id="@+id/btnMonitorL"
+                android:orientation="vertical"
+                android:gravity="center"
+                android:layout_width="35dp"
+                android:layout_height="35dp">
+                <ImageButton
+                    android:id="@+id/btnMonitor"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:scaleType="fitCenter"
+                    android:background="@drawable/btn_monitor"
+                    android:gravity="center" />
+            </LinearLayout>
         </LinearLayout>
         <LinearLayout
             android:orientation="vertical"
             android:gravity="center"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_weight="1">
 
             <LinearLayout
                 android:id="@+id/btnMoreL"
                 android:orientation="vertical"
                 android:gravity="center"
-                android:layout_width="36dp"
-                android:layout_height="28.5dp"
-                android:layout_weight="1">
+                android:layout_width="35dp"
+                android:layout_height="35dp">
                 <ImageButton
                     android:id="@+id/btnMore"
-                    android:layout_width="23dp"
-                    android:layout_height="23dp"
+                    android:layout_width="22dp"
+                    android:layout_height="22dp"
                     android:background="@drawable/btn_more"
                     android:gravity="center"
                     android:scaleType="fitCenter" />
