消息分组优化3 等等

--- a/app/src/main/res/layout/activity_like.xml
+++ b/app/src/main/res/layout/activity_like.xml
@@ -62,6 +62,10 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp" />
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="40dp"
+            android:layout_height="50dp">
+        </LinearLayout>
     </LinearLayout>
 
     <include layout="@layout/layout_edit_head"/>
