列表编辑优化9

--- a/app/src/main/res/drawable/btn_file.xml
+++ b/app/src/main/res/drawable/btn_file.xml
@@ -4,7 +4,7 @@
     android:viewportWidth="1024"
     android:viewportHeight="1024">
   <path
-      android:pathData="M591.9,101.4a153.6,153.6 0,0 1,119.6 58.9l124.9,156.4A155.9,155.9 0,0 1,869.9 412.7v354.3a153.6,153.6 0,0 1,-153.6 153.6h-409.6a153.6,153.6 0,0 1,-153.6 -153.6L153.1,255a153.6,153.6 0,0 1,153.6 -153.6L591.9,101.4zM591.9,152.6L307.2,152.6a102.4,102.4 0,0 0,-102.4 97.3v517.1a102.4,102.4 0,0 0,97 102.4h414.7a102.4,102.4 0,0 0,102.4 -97.3L818.9,412.7a102.4,102.4 0,0 0,-18.7 -58.9l-3.8,-5.1 -124.9,-156.7a102.4,102.4 0,0 0,-74.2 -38.4l-5.4,-1zM512,383c6.8,0 13.3,2.7 18.1,7.5A25.6,25.6 0,0 1,537.6 408.6v102.4h102.4c6.8,0 13.3,2.7 18.1,7.5a25.6,25.6 0,0 1,0 36.2A25.6,25.6 0,0 1,640 562.2L537.6,562.2v102.4c0,6.8 -2.7,13.3 -7.5,18.1a25.6,25.6 0,0 1,-36.2 0A25.6,25.6 0,0 1,486.4 664.6L486.4,562.2L384,562.2a25.6,25.6 0,0 1,-18.1 -7.5,25.6 25.6,0 0,1 0,-36.2A25.6,25.6 0,0 1,384 511h102.4L486.4,408.6c0,-6.8 2.7,-13.3 7.5,-18.1A25.6,25.6 0,0 1,512 383z"
-      android:strokeWidth="22" android:strokeColor="#8a8a8a"
-      android:fillColor="#8a8a8a"/>
+      android:pathData="M543.9,146.3c5.7,0 8.5,2.7 8.5,8.1V473.4H869.2c5.6,0 8.5,2.7 8.5,8.1v61c0,5.4 -2.9,8 -8.5,8H552.4v319c0,5.4 -2.8,8.1 -8.5,8.1h-63.8c-5.7,0 -8.5,-2.7 -8.5,-8.1l-0.1,-319H154.8c-5.7,0 -8.6,-2.6 -8.6,-8v-61c0,-5.4 2.9,-8 8.5,-8l316.8,-0.1V154.5c0,-5.5 2.9,-8.2 8.6,-8.2h63.8z"
+      android:strokeWidth="10" android:strokeColor="@color/blackGray"
+      android:fillColor="@color/blackGray"/>
 </vector>
