列表编辑优化10

--- a/app/src/main/res/drawable/btn_clear.xml
+++ b/app/src/main/res/drawable/btn_clear.xml
@@ -1,12 +1,18 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="200.2dp"
+    android:width="209.4dp"
     android:height="200dp"
-    android:viewportWidth="1025"
+    android:viewportWidth="1072"
     android:viewportHeight="1024">
   <path
-      android:pathData="M778.2,381c-14.6,0 -29.1,14.6 -29.1,29.2v418.2c0,14.6 -14.6,29.2 -29.1,29.2H332c-14.6,0 -29.1,-14.6 -29.1,-29.2V410.2c0,-14.6 -9.7,-29.2 -29.1,-29.2 -14.6,0 -29.1,14.6 -29.1,29.2v418.2C249.6,872.1 283.5,911 332,911h388a87.1,87.1 0,0 0,87.3 -87.5V410.2c0,-14.6 -14.6,-29.2 -29.1,-29.2z"
+      android:pathData="M197,268.2h-68.3v536.4a195,195 0,0 0,195 195h390.1a195,195 0,0 0,195 -195v-536.4h-68.3v541.3a121.9,121.9 0,0 1,-121.9 121.9h-399.8a121.9,121.9 0,0 1,-121.9 -121.9V268.2z"
       android:fillColor="@color/blackGray"/>
   <path
-      android:pathData="M467.8,711.6L467.8,410.2c0,-14.6 -9.7,-29.2 -29.1,-29.2 -14.6,0 -29.1,14.6 -29.1,29.2L409.6,716.5c0,14.6 9.7,29.2 29.1,29.2 19.4,-4.9 29.1,-14.6 29.1,-34zM637.5,711.6L637.5,410.2c0,-14.6 -14.6,-29.2 -29.1,-29.2s-29.1,14.6 -29.1,29.2L579.4,716.5c0,14.6 14.6,29.2 29.1,29.2 14.6,-4.9 29.1,-14.6 29.1,-34zM884.9,269.1L749.1,269.1v-53.5c0,-43.8 -38.8,-82.7 -82.4,-82.7h-281.3c-48.5,0 -82.4,34 -82.4,82.7L302.9,274L167.1,274c-14.6,-4.9 -29.1,9.7 -29.1,24.3s14.6,24.3 29.1,24.3h717.8c14.6,0 29.1,-9.7 29.1,-24.3s-14.6,-29.2 -29.1,-29.2zM690.9,269.1L356.3,269.1v-53.5c0,-14.6 14.6,-29.2 29.1,-29.2h281.3c14.6,0 24.3,9.7 24.3,29.2z"
+      android:pathData="M6.9,238.9m36.6,0l950.9,0q36.6,0 36.6,36.6l0,0q0,36.6 -36.6,36.6l-950.9,0q-36.6,0 -36.6,-36.6l0,0q0,-36.6 36.6,-36.6Z"
+      android:fillColor="@color/blackGray"/>
+  <path
+      android:pathData="M348.2,18.9m36.6,0l268.2,0q36.6,0 36.6,36.6l0,0q0,36.6 -36.6,36.6l-268.2,0q-36.6,0 -36.6,-36.6l0,0q0,-36.6 36.6,-36.6Z"
+      android:fillColor="@color/blackGray"/>
+  <path
+      android:pathData="M390.2,433.4a36.6,36.6 0,0 0,-36.6 36.6v268.2a36.6,36.6 0,1 0,73.1 0v-268.2a36.6,36.6 0,0 0,-36.6 -36.6zM647.5,433.4a36.6,36.6 0,0 0,-36.6 36.6v268.2a36.6,36.6 0,1 0,73.1 0v-268.2a36.6,36.6 0,0 0,-36.6 -36.6z"
       android:fillColor="@color/blackGray"/>
 </vector>
