--- a/app/src/main/res/layout/feet_dialog.xml
+++ b/app/src/main/res/layout/feet_dialog.xml
@@ -43,6 +43,9 @@
         android:orientation="horizontal">
         <EditText
             android:id="@+id/dialog_text_filename"
+            android:background="@drawable/edit_text_bg3"
+            android:paddingLeft="6dp"
+            android:paddingRight="6dp"
             android:gravity="center|start"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
