--- a/app/src/main/res/layout/feet_dialog.xml
+++ b/app/src/main/res/layout/feet_dialog.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/feet_dialog_l"
     android:layout_width="match_parent"
     android:layout_height="200dp"
     android:layout_marginLeft="14dp"
@@ -41,6 +42,13 @@
         android:layout_gravity="center"
         android:gravity="center"
         android:orientation="horizontal">
+        <!-- 添加这个View是为了控制EditText的焦点问题 -->
+        <View
+            android:id="@+id/dialog_for_focus"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:focusable="true"
+            android:focusableInTouchMode="true" />
         <EditText
             android:id="@+id/dialog_text_filename"
             android:background="@drawable/edit_text_bg3"
