--- a/app/src/main/res/layout/top_dialog.xml
+++ b/app/src/main/res/layout/top_dialog.xml
@@ -73,13 +73,13 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="25dp"
                     android:textColor="@color/gray3"
-                    android:text="* 双击屏幕亦可朗读/停止"/>
+                    android:text="• 双击屏幕亦可朗读/停止"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="25dp"
                     android:textColor="@color/gray3"
-                    android:text="* 省电策略之无限制，设置后需稍等策略生效"/>
+                    android:text="• 推荐下载讯飞语记，切换引擎设置更多语音"/>
             </LinearLayout>
 
         </LinearLayout>
