--- a/app/src/main/res/layout/feet_dialog.xml
+++ b/app/src/main/res/layout/feet_dialog.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/feet_dialog_l"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="wrap_content"
     android:layout_marginLeft="14dp"
     android:layout_marginRight="14dp"
     android:layout_marginBottom="20dp"
@@ -23,70 +23,106 @@
         android:textSize="19dp"
         android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/dialog_text"
-        android:layout_width="260dp"
-        android:layout_height="60dp"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:text="监测到影音文件，是否下载？"
-        android:textAlignment="center"
-        android:textColor="@color/blackGray"
-        android:textSize="17dp" />
-
     <LinearLayout
-        android:id="@+id/dialog_text_layout"
-        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_gravity="center"
         android:gravity="center"
-        android:orientation="horizontal">
-        <!-- 添加这个View是为了控制EditText的焦点问题 -->
-        <View
-            android:id="@+id/dialog_for_focus"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:focusable="true"
-            android:focusableInTouchMode="true" />
-        <EditText
-            android:id="@+id/dialog_text_filename"
-            android:background="@drawable/edit_text_bg3"
-            android:paddingLeft="6dp"
-            android:paddingRight="6dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/dialog_text"
+            android:layout_width="260dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:gravity="center"
-            android:layout_width="wrap_content"
-            android:maxWidth="180dp"
-            android:minWidth="50dp"
-            android:layout_height="32dp"
-            android:textSize="17dp"
-            android:inputType="text"
-            android:textColor="@color/gray2"
-            android:textColorHint="@color/gray2"
-            android:textCursorDrawable="@drawable/edit_text_cursor"
-            android:maxLines="1"/>
-        <TextView
-            android:id="@+id/dialog_text_fileType"
-            android:gravity="center|start"
-            android:layout_width="wrap_content"
-            android:layout_height="32dp"
-            android:textIsSelectable="false"
+            android:text="监测到影音文件，是否下载？"
+            android:textAlignment="center"
             android:textColor="@color/blackGray"
-            android:textSize="17dp"
-            android:inputType="text"
-            android:maxLines="1"
-            android:layout_marginLeft="2dp"/> <!-- android:textIsSelectable="true" 允许复制-->
-        <TextView
-            android:id="@+id/dialog_text_fileSize"
-            android:gravity="center|start"
-            android:layout_width="wrap_content"
-            android:minWidth="65dp"
-            android:layout_height="32dp"
-            android:textIsSelectable="false"
-            android:textColor="@color/blackGray"
-            android:textSize="17dp"
-            android:inputType="text"
-            android:maxLines="1" /> <!-- android:textIsSelectable="true" 允许复制-->
+            android:textSize="17dp" />
+
+        <LinearLayout
+            android:id="@+id/dialog_text_layout"
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:orientation="horizontal">
+            <!-- 添加这个View是为了控制EditText的焦点问题 -->
+            <View
+                android:id="@+id/dialog_for_focus"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:focusable="true"
+                android:focusableInTouchMode="true" />
+            <EditText
+                android:id="@+id/dialog_text_filename"
+                android:background="@drawable/edit_text_bg3"
+                android:paddingLeft="6dp"
+                android:paddingRight="6dp"
+                android:gravity="center"
+                android:layout_width="wrap_content"
+                android:maxWidth="180dp"
+                android:minWidth="50dp"
+                android:layout_height="32dp"
+                android:textSize="17dp"
+                android:inputType="text"
+                android:textColor="@color/gray2"
+                android:textColorHint="@color/gray2"
+                android:textCursorDrawable="@drawable/edit_text_cursor"
+                android:maxLines="1"/>
+            <TextView
+                android:id="@+id/dialog_text_fileType"
+                android:gravity="center|start"
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                android:textIsSelectable="false"
+                android:textColor="@color/blackGray"
+                android:textSize="17dp"
+                android:inputType="text"
+                android:maxLines="1"
+                android:layout_marginLeft="2dp"/> <!-- android:textIsSelectable="true" 允许复制-->
+            <TextView
+                android:id="@+id/dialog_text_fileSize"
+                android:gravity="center|start"
+                android:layout_width="wrap_content"
+                android:minWidth="65dp"
+                android:layout_height="32dp"
+                android:textIsSelectable="false"
+                android:textColor="@color/blackGray"
+                android:textSize="17dp"
+                android:inputType="text"
+                android:maxLines="1" /> <!-- android:textIsSelectable="true" 允许复制-->
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/delete_select_l"
+            android:layout_width="match_parent"
+            android:layout_height="21dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:visibility="gone">
+            <CheckBox
+                android:id="@+id/delete_select"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginRight="4dp"
+                android:button="@drawable/btn_radio"
+                android:checked="false"
+                android:gravity="center" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textIsSelectable="false"
+                android:gravity="center"
+                android:textColor="@color/blackGray"
+                android:textSize="14dp"
+                android:layout_marginBottom="1dp"
+                android:text="删除原文件"/>
+        </LinearLayout>
+
     </LinearLayout>
 
     <LinearLayout
