--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,7 +26,7 @@
     <!--<color name="colorLightGray2">#cfcfcf</color>-->
     <color name="blackGray">#787878</color>
     <color name="translucentBlackGray">#0a686565</color>
-    <color name="colorLightGray1">#f3f3f3</color>
+    <color name="colorLightGray1">#EFEFEF</color>
     <color name="colorLightGray0">#F8F8F8</color>
     <color name="transparentLightGray1">#3CF3F3F3</color>
     <color name="colorLightGray">#f1f1f1</color>
