--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -3,6 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="41dp"
     android:gravity="center"
+    android:id="@+id/item_layout"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <LinearLayout
@@ -12,6 +14,26 @@
         android:layout_marginLeft="15dp"
         android:layout_marginRight="10dp"
         android:orientation="horizontal">
+        <LinearLayout
+            android:id="@+id/item_drag"
+            android:layout_width="22dp"
+            android:layout_height="40dp"
+            android:paddingTop="2dp"
+            android:orientation="vertical"
+            android:visibility="gone"
+            android:gravity="center|start">
+            <ImageView
+                android:layout_width="18dp"
+                android:layout_height="18dp"
+                android:scaleType="centerInside"
+                android:src="@drawable/btn_drag" />
+            <!--<TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/blackGray"
+                android:textSize="12dp"
+                android:text="编 辑"/>-->
+        </LinearLayout>
         <LinearLayout
             android:id="@+id/item_l"
             android:layout_width="0dp"
