--- a/app/src/main/res/layout/click_dialog.xml
+++ b/app/src/main/res/layout/click_dialog.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/click_dialog_l"
+    android:layout_marginBottom="20dp"
+    android:layout_marginRight="20dp"
     android:layout_width="160dp"
     android:layout_height="wrap_content"
     android:background="@color/translucent"
